Правки после автопроверки

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -578,11 +578,11 @@ header {
 
 /* Поиск отелей */
 .search-hotels {
-  display: flex;
+  display: block;
   min-height: 214px;
   margin: 0 auto;
   padding: 96px 304px;
-  flex-direction: column;
+  /* flex-direction: column; */
 }
 
 .search-hotels p {
@@ -608,6 +608,7 @@ header {
   background-color: #c7b39b;
   color: #ffffff;
 }
+
 .subscribe-form {
   display: flex;
   margin: auto;
@@ -781,7 +782,7 @@ header {
 
 .filter-form {
   background-image: url("../images/filtr-background.jpg");
-  background-size: cover;
+  object-fit: contain;
   background-repeat: no-repeat;
   background-color: #756157;
   color: #ffffff;
@@ -1130,6 +1131,7 @@ input[type="number"]:focus {
 .result-search {
   display: flex;
   align-items: center;
+  width: 1060px;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
@@ -1148,7 +1150,7 @@ input[type="number"]:focus {
 .select-control {
   display: flex;
   width: 292px;
-  margin-right: 70px;
+  margin-right: 69px;
   min-height: 49px;
   padding: 5px 15px 5px 20px;
   box-sizing: border-box;
@@ -1167,6 +1169,7 @@ input[type="number"]:focus {
 .select-control:hover,
 .select-control:focus-visible {
   outline: 2px solid #68a2ca;
+  outline-offset: -2px;
 }
 .show {
   display: flex;
@@ -1415,12 +1418,12 @@ input[type="number"]:focus {
   color: rgba(0, 0, 0, 1);
   margin: 0;
   padding: 0;
-  margin-bottom: 64px;
+  margin-bottom: 63px;
 }
 
 .close-button {
   position: absolute;
-  top: 63px;
+  top: 65px;
   right: 52px;
   height: 52px;
   width: 52px;
@@ -1464,7 +1467,7 @@ input[type="number"]:focus {
   display: flex;
   box-sizing: border-box;
   color: #000;
-  font-family: PT Sans;
+  font-family: "PT Sans", sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
@@ -1477,6 +1480,7 @@ input[type="number"]:focus {
   background-image: url("../images/modal/calendar.svg");
   background-repeat: no-repeat;
   background-position: center right 23px;
+  margin-bottom: 3px;
 }
 
 .field-modal:hover {
@@ -1516,13 +1520,14 @@ input[type="number"]:focus {
 }
 
 .modal-info {
+  display: block;
   margin: 0;
   margin-left: 137px;
-  margin-top: 3px;
   font-size: 16px;
   line-height: 21px;
   color: #333333;
   padding: 0 20px;
+  margin-bottom: 1px;
 }
 
 .error {
@@ -1536,7 +1541,7 @@ input[type="number"]:focus {
 .modal-guests {
   display: flex;
   gap: 88px;
-  margin-bottom: 24px;
+  margin-bottom: 26px;
 }
 
 .amount-wrapper {
@@ -1570,7 +1575,7 @@ input[type="number"]:focus {
   height: 48px;
   box-sizing: border-box;
   padding: 14px 10px;
-  font-family: PT Sans;
+  font-family: "PT Sans", sans-serif;
   justify-content: center;
   align-items: center;
   background: #f2f2f2;
@@ -1587,22 +1592,43 @@ input[type="number"]:focus {
   cursor: pointer;
   width: 40px;
   height: 48px;
+  outline: none;
 }
-.amount:hover path {
+
+.amount:hover path,
+.amount:focus path {
   fill: #000;
   fill-opacity: 1;
 }
-.amount:focus {
-  fill: #000;
-  fill-opacity: 1;
-}
+
 .amount:focus-visible {
   border: 3px solid #82b3d3;
   border-radius: 4px;
-  outline: none;
 }
 .amount:active {
   opacity: 0.2;
+}
+
+.modal-button.select {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  box-sizing: border-box;
+  font-family: "PT Sans", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  line-height: 24px;
+  font-weight: 700;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 18px 77px;
+  border: 0;
+  margin: 0;
+  border-radius: 10px;
 }
 
 .tooltip {
@@ -1665,26 +1691,4 @@ input[type="number"]:focus {
 .tooltip-toggle:focus + .tooltip-popup {
   display: block;
   padding: 17px 16px;
-}
-
-.modal-button.select {
-  display: flex;
-  width: 100%;
-  flex-wrap: wrap;
-  justify-content: center;
-  box-sizing: border-box;
-  font-family: PT Sans;
-  font-size: 20px;
-  font-style: normal;
-  line-height: 24px;
-  font-weight: 700;
-  align-items: center;
-  text-align: center;
-  text-transform: uppercase;
-  color: #ffffff;
-  text-decoration: none;
-  padding: 18px 77px;
-  border: 0;
-  margin: 0;
-  border-radius: 10px;
 }
