Правки по критериям защиты

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -244,6 +244,10 @@ img {
   scale: 1.05;
 }
 
+.navigation-logo:active {
+  opacity: 0.5;
+}
+
 .nav-list {
   display: flex;
   flex-wrap: wrap;
@@ -270,6 +274,10 @@ img {
 
 .navigation-link:hover {
   color: #756157;
+}
+
+.navigation-link:active {
+  opacity: 0.5;
 }
 
 .nav-item-current {
@@ -312,6 +320,11 @@ img {
 .nav-user.search:hover {
   scale: 1.1;
 }
+
+.nav-user.search:active {
+  opacity: 0.5;
+}
+
 .nav-user.favorites {
   margin-right: 21px;
   background-image: url(../images/header/heart.svg);
@@ -323,6 +336,10 @@ img {
 
 .nav-user.favorites:hover {
   scale: 1.1;
+}
+
+.nav-user.favorites:active {
+  opacity: 0.5;
 }
 
 .nav-user.favorites::before {
@@ -446,12 +463,9 @@ header {
 }
 
 .image-advantages {
-  background-image: url(../images/advantages/street.jpg);
-  background-repeat: no-repeat;
-  width: 800px;
-  background-position: center;
-  margin: 0;
-  object-fit: contain;
+  display: block;
+  margin: auto;
+  background-color: #c7b39b;
 }
 
 .medium-background {
@@ -485,11 +499,9 @@ header {
 }
 
 .image-bridge {
-  background-image: url(../images/advantages/bridge.jpg);
-  background-repeat: no-repeat;
-  width: 800px;
-  margin: 0;
-  object-fit: contain;
+  display: block;
+  margin: auto;
+  background-color: #c7b39b;
 }
 
 .intro-service {
@@ -745,7 +757,7 @@ header {
 
 .filter-form {
   background-image: url("../images/filtr-background.jpg");
-  object-fit: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   background-color: #756157;
   color: #ffffff;
@@ -842,7 +854,6 @@ header {
   display: flex;
   margin: 0;
   padding: 0;
-  height: 157px;
   border: none;
   margin-right: 70px;
 }
@@ -1079,7 +1090,7 @@ input[type="number"]:focus {
 .button-search {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  margin-top: 55px;
   gap: 32px;
 }
 
